# _package_template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.package_slug }}/: README.md  notes.md  pyproject.toml  setup.cfg
{{ cookiecutter.package_slug }}/docs/source/: api.md  changelog.md  conf.py  index.md
{{ cookiecutter.package_slug }}/{{ cookiecutter.package_slug }}/: models.py  types.py  utils.py
