# Remove once PIP supports reading project metadata from pyproject.toml
[metadata]
name = {{ cookiecutter.package_slug }}
version = 0.0.0

[options]
install_requires =
    numpy
    pandas
    scipy
    scikit-image
    matplotlib
    networkx
    tensorflow-gpu
packages = find:

; [options.extras_require]


; [options.entry_points]
; console_scripts =
;     {{ cookiecutter.package_slug }} = {{ cookiecutter.package_slug }}.cli:main
